--- a/layouts/schedule/track.html
+++ b/layouts/schedule/track.html
@@ -1,24 +1,120 @@
-<dl class="dl-horizontal well">
-    <% if item[:rooms].empty? %>
-    <dt>Room:</dt>
-    <dd>No room assigned yet</dd>
-    <% else %>
-    <dt>Room<%= item[:rooms].size == 1 ? '' : 's' %>:</dt>
-    <dd><%= l item[:rooms].map(&$to_room) %></dd>
-    <% end %>
-    <dt>Calendar:</dt>
-    <dd>
-        <ul class="horizontal-list">
-            <%
+<%
+# vim: set ft=eruby ts=2 sw=2 et ai:
+%>
+<p class="side-box">
+<i class="icon-home"></i> <strong>Room<%= item[:rooms].size == 1 ? '' : 's' %></strong>:
+<% if item[:rooms].empty? %>
+<span class="muted">No room assigned yet</span>
+<% else %>
+<%= l item[:rooms].map(&$to_room) %>
+<% end %>
+<br/>
+<i class="icon-calendar"></i> <strong>Calendar:</strong>
+<%=
 [
-{ name: 'iCal', identifier: "/schedule/ical/track/#{item[:slug]}/" },
-{ name: 'xCal', identifier: "/schedule/xcal/track/#{item[:slug]}/" },
-].each do |cal| %>
-            <li><%= l($item_by_id.fetch(cal[:identifier]), cal[:name]) %></li>
-            <% end %>
-        </ul>
-    </dd>
-</dl>
+  { name: 'iCal', identifier: "/schedule/ical/track/#{item[:slug]}/" },
+  { name: 'xCal', identifier: "/schedule/xcal/track/#{item[:slug]}/" },
+].map{|cal| l(cal[:identifier], cal[:name]) }.join(", ")
+%>
+</p>
+<br style="clear: both;"/>
+<%
+  interval = $timetable.first.last.fetch(:interval)
+  
+  days = $compressed_flatlist.keys.map(&$to_day)
+  start = days.map{|d| Time.parse(d[:start_time])}.min
+  start_hour = start.hour
+
+  dayend = days.map{|d| Time.parse(d[:end_time])}.max
+  num_cells = dayend.hour - start_hour
+  num_slots = num_cells * (60 / interval)
+%>
+<table class="table table-striped table-bordered table-condensed roomtracks">
+  <thead>
+    <tr>
+      <th class="day"></th>
+      <% if item[:rooms].size > 1 %>
+      <th class="room">Room</th>
+      <% end %>
+      <% (0..num_cells-1).each do |i| %>
+      <th colspan="<%= 60 / interval %>" style="text-align: left;"><%= format("%02d", start_hour + i) %></th>
+      <% end %>
+    </tr>
+  </thead>
+  <tbody>
+<%
+  last_day = nil
+  $compressed_flatlist
+  .select{|dayslug, list| item[:events_by_day].has_key? dayslug.to_sym and not item[:events_by_day][dayslug.to_sym].empty? }
+  .each do |dayslug, flatlist_by_room|
+    d = $to_day.call(dayslug)
+    track_rooms_that_day = item[:events_per_room_per_day][dayslug.to_sym].keys
+    last_track = nil
+    flatlist_by_room.select{|r, cells| track_rooms_that_day.include? r.to_sym}.each do |roomslug, cells|
+      start_offset_slots = (((Time.parse(d[:start_time]) - start) / 60) / interval).to_i
+      fillup_slots = (((dayend - Time.parse(d[:end_time])) / 60) / interval).to_i
+%>
+    <tr>
+      <%
+        if last_day.nil? or last_day != dayslug
+          last_day = dayslug
+      %>
+      <th class="day"<% if track_rooms_that_day.size > 1 %> rowspan="<%= track_rooms_that_day.size %>" style="vertical-align: middle;"<% end %>><%= l(d) %></th>
+      <% end %>
+      <% if item[:rooms].size > 1 %>
+        <th class="room"><%= l(room(roomslug)) %></th>
+      <% end %>
+      <% (0..start_offset_slots-1).each do |x| %>
+        <td></td>
+      <% end %>
+      <%
+        slots = 0
+        cells.each do |cell|
+          if cell.nil?
+            slots += 1
+          %>
+          <td></td>
+          <%
+            else
+              slots += cell[:slots]
+              color_class = if last_track.nil? or cell[:track] != last_track
+                              last_track = cell[:track]
+                              if cell[:track] == item[:slug]
+                                "c1"
+                              else
+                                "other-track"
+                              end
+                            else
+                              "c1"
+                            end
+          %>
+          <td<% if color_class %> class="<%= color_class %>"<% end %> colspan="<%= cell[:slots] %>"><%= l(track(cell[:track]), :name, '', :title) %></td>
+        <%
+          end #cell.nil?
+        end #cells
+        #(0..num_slots-start_offset_slots-slots + compensation_slots - 1).each do |x|
+        (1..fillup_slots).each do |x|
+      %>
+      <td></td>
+      <%
+        end #x
+      %>
+      </tr>
+    <%
+      end #flatlist_by_room
+    end #compressed_flatlist
+  %>
+  </tbody>
+</table>
+
+<%
+    description = $item_by_id["/schedule/devrooms/#{item[:slug]}/"]
+    if description
+%>
+<div class="well well-small track-description">
+    <%= description.compiled_content %>
+</div>
+<% end %>
 
 <table class="table table-striped table-bordered table-condensed">
     <thead>
@@ -41,7 +137,7 @@
         rooms = (item[:rooms].size > 1) ? item[:rooms].map(&$to_room) : []
         %>
         <tr>
-            <td colspan="5"><h2><%= day[:title] %></h2></td>
+            <td colspan="5"><h3><%= day[:title] %></h3></td>
         </tr>
         <% event_slugs.map(&$to_event).sort_by{|e| [e[:start_time], e[:room_rank]]}.each do |e| %>
         <tr>
