slight improvement to the track timetables

--- a/content/assets/style/parts/schedule.css
+++ b/content/assets/style/parts/schedule.css
@@ -176,8 +176,8 @@ body.fullpage {
 .roomtracks tbody th a {
     color: inherit;
 }
-.roomtracks tbody tr.building_start th,
-.roomtracks tbody tr.building_start td {
+.roomtracks tbody tr.section_start th,
+.roomtracks tbody tr.section_start td {
     border-top: 2px solid #000;
 }
 
