--- a/content/assets/style/parts/schedule.css
+++ b/content/assets/style/parts/schedule.css
@@ -113,7 +113,7 @@ table.timetable-body {
 }
 
 <% %w{69D2E7 A7DBD8 E0E4CC F38630 FA6900}.each_with_index do |color, index|%>
-.timetable .c<%= index + 1 %>, .roomtracks .c<%= index + 1 %> { background-color: #<%= color %> !important; }
+.c<%= index + 1 %> { background-color: #<%= color %> !important; }
 <% end %>
 
 .roomtracks .other-track {
@@ -180,6 +180,12 @@ body.fullpage {
 .roomtracks tbody tr.section_start td {
     border-top: 2px solid #000;
 }
+
+.roomtracks tbody tr.subsection_start th,
+.roomtracks tbody tr.subsection_start td {
+    border-top: 1px solid #000;
+}
+
 
 body.wide p {
     width: 70%;
