--- a/layouts/schedule/track.html
+++ b/layouts/schedule/track.html
@@ -21,6 +21,8 @@
 <%
   colors = 5
 
+  event_color = {}
+
   interval = $timetable.first.last.fetch(:interval)
   
   days = $compressed_flatlist.keys.map(&$to_day)
@@ -54,27 +56,29 @@
     track_rooms_that_day = item[:events_per_room_per_day][dayslug.to_sym].keys
     last_event = nil
     i = 0
-    flatlist_by_room.select{|r, cells| track_rooms_that_day.include? r.to_sym}.each do |roomslug, cells|
+    flatlist_by_room.select{|r, cellrows| track_rooms_that_day.include? r.to_sym}.each do |roomslug, cellrows|
       start_offset_slots = (((Time.parse(d[:start_time]) - start) / 60) / interval).to_i
       fillup_slots = (((dayend - Time.parse(d[:end_time])) / 60) / interval).to_i
       i += 1
-%>
+
+      cellrows.each_with_index do |cellsrow, row|
+    %>
     <tr<% if i < 2 %> class="section_start"<% end %>>
-      <%
-        if last_day.nil? or last_day != dayslug
-          last_day = dayslug
-      %>
-      <th class="day"<% if track_rooms_that_day.size > 1 %> rowspan="<%= track_rooms_that_day.size %>" style="vertical-align: middle;"<% end %>><%= l(d) %></th>
+      <% if last_day.nil? or last_day != dayslug %>
+      <th class="day"<% if track_rooms_that_day.size * cellrows.size > 1 %> rowspan="<%= track_rooms_that_day.size * cellrows.size %>" style="vertical-align: middle;"<% end %>><%= l(d) %></th>
+      <% last_day = dayslug %>
       <% end %>
       <% if item[:rooms].size > 1 %>
-        <th class="room"><%= l(room(roomslug)) %></th>
+        <% if cellrows.size < 2 or row < 1 %>
+          <th class="room<% if cellrows.size > 1 %> subsection_start" style="vertical-align: middle;" rowspan="<%= cellrows.size %><% end %>"><%= l(room(roomslug)) %></th>
+        <% end %>
       <% end %>
       <% (0..start_offset_slots-1).each do |x| %>
         <td></td>
       <% end %>
       <%
         slots = 0
-        cells.each do |cell|
+        cellsrow.each do |cell|
           if cell.nil?
             slots += 1
           %>
@@ -82,24 +86,24 @@
           <%
             else
               slots += cell[:slots]
-              color_class = if last_event.nil? or cell[:event_id] != last_event
-                              last_event = cell[:event_id]
-                              if cell[:track] == item[:slug]
-                                c += 1
-                                c %= colors
-                                "c#{c + 1}"
-                              else
-                                "other-track"
-                              end
-                            else
-                              "c#{c + 1}"
-                            end
+              color_class, link = if last_event.nil? or cell[:event_id] != last_event
+                                    last_event = cell[:event_id]
+                                    if cell[:track] == item[:slug]
+                                      c += 1
+                                      c %= colors
+                                      [ "c#{c + 1}", l(event(cell[:slug]), :title, '', :title) ]
+                                    else
+                                      [ "other-track", "" ]
+                                    end
+                                  else
+                                    [ "c#{c + 1}", l(event(cell[:slug]), :title, '', :title) ]
+                                  end
           %>
-          <td<% if color_class %> class="<%= color_class %>"<% end %> colspan="<%= cell[:slots] %>"><%= l(event(cell[:slug]), :title, '', :title) %></td>
+          <td<% if color_class %> class="<%= color_class %>"<% end %> colspan="<%= cell[:slots] %>"><%= link %></td>
+          <% event_color[cell[:event_id]] = color_class %>
         <%
           end #cell.nil?
         end #cells
-        #(0..num_slots-start_offset_slots-slots + compensation_slots - 1).each do |x|
         (1..fillup_slots).each do |x|
       %>
       <td></td>
@@ -110,6 +114,7 @@
     <%
       end #flatlist_by_room
     end #event_flatlist
+    end
   %>
   </tbody>
 </table>
@@ -126,6 +131,7 @@
 <table class="table table-striped table-bordered table-condensed">
     <thead>
         <tr>
+            <th></th>
             <th>Event</th>
             <th>Speakers</th>
             <% if item[:rooms].size > 1 %>
@@ -134,31 +140,32 @@
             <th>Start</th>
             <th>End</th>
         </tr>
-    </thead>
-    <tbody>
-        <%
+      </thead>
+      <tbody>
+      <%
         item[:events_by_day].each do |day_slug, event_slugs|
-        unless event_slugs.empty?
+          unless event_slugs.empty?
 
-        day = day(day_slug)
-        rooms = (item[:rooms].size > 1) ? item[:rooms].map(&$to_room) : []
-        %>
+            day = day(day_slug)
+            rooms = (item[:rooms].size > 1) ? item[:rooms].map(&$to_room) : []
+          %>
         <tr>
-            <td colspan="5"><h3><%= day[:title] %></h3></td>
+          <td colspan="6"><h3><%= day[:title] %></h3></td>
         </tr>
         <% event_slugs.map(&$to_event).sort_by{|e| [e[:start_time], e[:room_rank]]}.each do |e| %>
-        <tr>
+          <tr>
+            <td class="<%= event_color.fetch e[:event_id] %>">&nbsp;</td>
             <td><%= l e %></td>
-            <td><%= l e[:speakers].map(&$to_speaker) %>
-            <% unless rooms.empty?  %>
-            <td><%= l room(e[:room]) %></td>
-            <% end %>
-            <td><%= ltt e[:day], e[:start_time] %></td>
-            <td><%= ltt e[:day], e[:end_time] %></td>
-        </tr>
+            <td><%= l e[:speakers].map(&$to_speaker), :title, ", ", nil, 'quiet' %>
+              <% unless rooms.empty?  %>
+                <td><%= l room(e[:room]), :title, ", ", nil, 'quiet' %></td>
+              <% end %>
+            <td><%= ltt e[:day], e[:start_time], 'quiet' %></td>
+            <td><%= ltt e[:day], e[:end_time], 'quiet' %></td>
+          </tr>
         <% end %>
-        <% end %>
-        <% end %>
-    </tbody>
+      <% end %>
+    <% end %>
+  </tbody>
 </table>
 
