rename data sources + safer filenames + more logging in pentabarf + some changes in IDs to comply with nanoc conventions

--- a/layouts/schedule/speaker.html
+++ b/layouts/schedule/speaker.html
@@ -1,4 +1,4 @@
-<% photo = item[:photo] ? $item_by_id.fetch("/photos/photo/#{item[:photo].fetch(:slug)}/") : nil%>
+<% photo = item[:photo] ? $item_by_id.fetch("/photo/#{item[:photo].fetch(:slug)}/") : nil%>
 <% if photo %>
 <img src="<%= photo.path %>" width="<%= item[:photo].fetch(:width) %>" height="<%= item[:photo].fetch(:height) %>"/>
 <% end %>
