--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -60,7 +60,7 @@
     <tbody>
         <% item[:speakers].map(&$to_speaker).each do |s| %>
         <tr>
-            <% photo = s[:thumbnail] ? $item_by_id.fetch("/photos/thumbnail/#{s[:thumbnail][:slug]}/") : nil%>
+            <% photo = s[:thumbnail] ? $item_by_id.fetch("/thumbnail/#{s[:thumbnail][:slug]}/") : nil%>
             <td><% if photo %><a href="<%= speaker(s).path %>"><img class="thumb" height="<%= s[:thumbnail].fetch(:height) %>" width="<%= s[:thumbnail].fetch(:width) %>" src="<%= photo.path %>"/></a><% end %></td>
             <td><%= l s %></td>
         </tr>
